# pytest-dsl-ui

./: .gitignore  INSTALL.md  Makefile  PLAYWRIGHT_FIXES.md  README.md  browser_http_client.py  browser_http_keywords.py  browser_http_request.py  example_default_values.py  http_client.py  keywords.json  playwright2dsl.py  pyproject.toml  run_browser_http_test.py  run_browser_validation.py  run_dsl_test.py  setup_dev.py  test_retry_functionality.dsl  test_retry_scenarios.dsl  test_retry_simple.dsl  复用指南.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: README_browser_http.md  browser_http_implementation.md  browser_http_test_report.md  browser_launch_guide.md  multi_window_guide.md  playwright_improvements.md  认证状态管理指南.md
examples/: .gitignore  browser_http_config.yaml  browser_http_example.py  optimized_login_example.dsl  run_real_browser_test.py  smart_wait_baidu_test.dsl  test_browser_api_real.dsl  test_browser_http_jsonplaceholder.dsl  test_browser_http_runner.py  test_browser_http_simple.dsl  test_config_real.yaml  test_download_keywords.dsl  test_download_prebuilt.dsl  test_element_keywords.dsl  test_elements.html  test_keywords_directly.py  test_line_by_line.py  test_live_jsonplaceholder.py  test_network_debug.dsl  test_playwright_download_conversion.py  test_simple.dsl  test_simple_browser_api.dsl  test_specific_wait.py  verify_browser_http.py
examples/config/: browser_http_test_config.yaml  test_simple_config.yaml
pytest_dsl_ui/core/: browser_http_client.py  browser_http_request.py  browser_manager.py  (+3 more)
tests/: test_keywords.py
(+7 files in other folders)
